--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -37,14 +37,18 @@ jobs:
         run: |
           python monitor.py
 
-      - name: Commit state if changed
+      - name: Commit state if changed (with rebase)
         run: |
           if [[ -n "$(git status --porcelain)" ]]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add state/last_seen.json
-            git commit -m "chore(state): update last seen tweet id [skip ci]"
-            git push
+            # Commit locally (may be noop if nothing staged)
+            git commit -m "chore(state): update last seen tweet id [skip ci]" || true
+            # Rebase on top of latest remote to avoid non-fast-forward
+            git pull --rebase origin "$(git rev-parse --abbrev-ref HEAD)" || true
+            # Use --force-with-lease to safely update if rebase changed history
+            git push --force-with-lease
           else
             echo "No state changes to commit."
           fi
